# jx3EKey

./: .gitignore  README.md  index.html  package-lock.json  package.json  start.bat  vite.config.js
src/: App.vue  main.js  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
